# fyers_api_helper

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml
docs/: README.md  _sidebar.md  index.html
docs/cli/: access.md  config.md  search.md
docs/functions/: get_data.md
fyers_api_helper/: __init__.py  access.py  cli.py  config.py  data_manipulation.py  example.py  main.py  search.py
fyers_api_helper/static/css/: access_global.css  access_index.css  config_global.css  config_index.css
fyers_api_helper/templates/: access.html
fyers_h/: __init__.py  cli.py  config.py  test.py
fyers_h/templates/: config.html
tests/: test_access.py
