[tool.poetry]
name = "fyers_api_helper"
version = "0.6.0"
description = "Fyers API Helper Package"
authors = ["Aditya Kale <dev.adityakale@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
waitress = "^2.1.2"
fyers-apiv3 = "^3.0.6"
pandas = "^2.1.4"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
twine = "^4.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
fyersh = "fyers_api_helper.cli:main"
